--- a/_posts/2014-01-29-announcing-generator-angular-require.html
+++ b/_posts/2014-01-29-announcing-generator-angular-require.html
@@ -18,6 +18,7 @@ published: true
 meta:
   _edit_last: '1'
   _wpas_done_all: '1'
+redirect_from: "/index.php/category/yeoman/"
 ---
 I'm proud to announce the release of my first Yeoman generator, designed specifically to scaffold out and enforce a degree of rigour when working with <a title="AngularJS" href="http://angularjs.org/">AngularJS</a> projects that use <a title="RequireJS" href="http://requirejs.org/">RequireJS</a> for module loading.
 
