update to minima theme

--- a/_posts/2013-03-20-automation-with-grunt.html
+++ b/_posts/2013-03-20-automation-with-grunt.html
@@ -23,27 +23,27 @@ Put simply, Grunt is a JavaScript task runner. It uses JavaScript for task confi
 Grunt uses node.js, with all packages available via <a title="Node Packaged Modules" href="https://npmjs.org/" target="_blank">npm</a>. Therefore the first task is to install node.js, available from <a title="Node.js" href="http://www.nodejs.org" target="_blank">http://www.nodejs.org</a>
 
 Next up, open a command window, navigate to where you'd like to run Grunt from (typically a project directory) and type the following to install Grunt:
-<code>npm install grunt</code>
+{% highlight sh %}npm install grunt{% endhighlight %}
 Next up, we need to configure two files: package.json and Gruntfile.js
 
 Open your preferred text editor and type the following:
-<code>{
+{% highlight javascript %}{
  "name": "wluk-ui",
  "version": "0.1.0"
-}</code>
+}{% endhighlight %}
 Save this file as "package.json" in the directory from which you ran the Grunt install command earlier. Next up, we have to create the Grunt configuration file. Create a new file in your preferred text editor and put in the following contents:
-<code>module.exports = function(grunt) {
+{% highlight javascript %}module.exports = function(grunt) {
  grunt.initConfig({
  // Project settings
  pkg: grunt.file.readJSON("package.json"),
  });
-};</code>
+};{% endhighlight %}
 Save this file as "Gruntfile.js" in the same directory as package.json created earlier. Once that's done, we're ready to configure our first Grunt task. For the purposes of this example, we'll set up CSS linting.
 
 Install the CSS Lint Grunt package using your command window from earlier. Type the following to install the csslint package:
-<code>npm install grunt-contrib-csslint --save-dev</code>
+{% highlight sh %}npm install grunt-contrib-csslint --save-dev{% endhighlight %}
 This installs the CSS Lint Grunt plugin and also updates the package.json file to account for this dependency. The final part of Grunt task configuration is to put an entry for this task in to the Grunt file. Open "Gruntfile.js" in your preferred text editor, and insert the following code after the line containing "readJSON":
-<code> // CSSLint. Tests CSS code quality
+{% highlight javascript %} // CSSLint. Tests CSS code quality
  // https://github.com/gruntjs/grunt-contrib-csslint
  csslint: {
   // define the files to lint
@@ -53,11 +53,11 @@ This installs the CSS Lint Grunt plugin and also updates the package.json file t
     "import": 2
    }
   }
- }</code>
+ }{% endhighlight %}
 Next, we have to instruct Grunt to load the plugin, which involves adding the following line of code to the end fo the file, just before the closing brace (i.e. add this to the second from last line of Gruntfile.js):
-<code>grunt.loadNpmTasks("grunt-contrib-csslint");</code>
+{% highlight javascript %}grunt.loadNpmTasks("grunt-contrib-csslint");{% endhighlight %}
 Gruntfile.js should now look like so:
-<code>module.exports = function(grunt) {
+{% highlight javascript %}module.exports = function(grunt) {
  grunt.initConfig({
  // Project settings
  pkg: grunt.file.readJSON("package.json"),
@@ -74,9 +74,9 @@ Gruntfile.js should now look like so:
  }
  });
  grunt.loadNpmTasks("grunt-contrib-csslint");
-};</code>
+};{% endhighlight %}
 Finally, we can run our Grunt task to lint our CSS files, like so in a command window:
-<code>grunt csslint</code>
+{% highlight javascript %}grunt csslint{% endhighlight %}
 This will lint all CSS files within the "css" and all sub-directories of the "css" directory. More information can be found on the CSS Lint plugin at <a title="CSS Lint Grunt plugin on Github" href="https://github.com/gruntjs/grunt-contrib-csslint" target="_blank">https://github.com/gruntjs/grunt-contrib-csslint</a>
 
 With CSS Linting sorted, I encourage you to explore the <a title="Grunt Plugins Directory" href="http://gruntjs.com/plugins" target="_blank">Grunt plugins directory</a> and get cracking with your own automated workflow and enhance your productivity!
