--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <!-- This loops through the paginated posts -->
  <ul>
   {% for post in paginator.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li><a href="{{ post.url }}">{{ post.title }}</a>&nbsp;(<time>{{ post.date | date_to_string }}</time>)</li>
   {% endfor %}
 </ul>
 
